# Catsi

./: .env  .gitignore  pyproject.toml
app/: main.py
app/api/v1/: dependencies.py  router.py
app/api/v1/endpoints/: auth.py  chat.py  document.py  documents.py  users.py
app/core/: config.py  logger.py  rate_limiter.py  security.py
app/db/: database.py
app/models/: __init__.py  document.py  user.py
app/schemas/: chat.py  document.py  user.py
app/services/: chunking.py  document_parser.py  document_processor.py  query_translation.py  reranker.py  vector_store.py
tests/: conftest.py  test_auth.py  test_chat.py  test_documents.py
